all ok before route sorting
